# dsit-impact

./: README.md  pyproject.toml  requirements.txt
conf/: README.md  logging.yml
conf/base/: catalog.yml  parameters_data_collection_gtr.yml  parameters_data_collection_s2.yml  parameters_data_matching_oa.yml  parameters_data_processing_authors.yml  parameters_data_processing_pdfs.yml  parameters_data_results_team_metrics.yml  parameters_global.yml
src/dsit_impact/: __init__.py  __main__.py  settings.py
src/dsit_impact/datasets/: pdf_dataset.py
src/dsit_impact/pipelines/data_analysis_team_metrics/: __init__.py  nodes.py  pipeline.py
src/dsit_impact/pipelines/data_collection_gtr/: nodes.py  pipeline.py  utils.py
src/dsit_impact/pipelines/data_collection_oa/: __init__.py  nodes.py  pipeline.py
src/dsit_impact/pipelines/data_collection_s2/: __init__.py  nodes.py  pipeline.py  utils.py
src/dsit_impact/pipelines/data_generation/: nodes.py  pipeline.py
src/dsit_impact/pipelines/data_matching_oa/: nodes.py  pipeline.py  utils.py
src/dsit_impact/pipelines/data_processing_authors/: __init__.py  nodes.py  pipeline.py
src/dsit_impact/pipelines/data_processing_pdfs/: __init__.py  nodes.py  pipeline.py  utils.py
src/dsit_impact/pipelines/data_results_team_metrics/: pipeline.py  utils.py
tests/: conftest.py
tests/pipelines/data_collection_gtr/: test_integration.py  test_pipeline.py  test_unit.py
tests/pipelines/data_collection_oa/: test_integration.py  test_unit.py
tests/pipelines/data_matching_oa/: test_integration.py  test_unit.py
(+9 files in other folders)
